# ybikey-zfs-pass

./: .gitignore  Cargo.toml  newsecret.py
src/: dicepw.rs  get_wordlist.py  main.rs  passwd.txt
src/dicepw/: generate.rs  params.rs  passphrase.rs
