[package]
name = "yk-zfs-disk-unlock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chbs = "0.1.1"
clap = { version = "4.2.1", features = ["derive"] }
concat-arrays = "0.1.2"
lazy_static = "1.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.7.0"
serde = { version = "1.0.159", features = ["derive"] }
